--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -22,7 +22,7 @@
             Home
           </li>
         </a>
-        <a href="#" class="menu_item">
+        <a href="/upload" class="menu_item">
           <li class="menu-sub-item">
             Add file
           </li>
