--- a/templates/upload.html
+++ b/templates/upload.html
@@ -35,9 +35,17 @@
         </a>
       </ul>
     </div>
-    <div class="upload_page">
+    <div class="upload_page" >
+      <div class="loading off" id="loadind">
+        <div class="large_load_circle">
+          <div class="small_load_circle">
 
-        <div class="choose_upload_box">
+          </div>
+        </div>
+        Uploading please wait ...
+      </div>
+
+        <div class="choose_upload_box" id="choose_upload_box">
             <form  enctype="multipart/form-data" action="http://127.0.0.1:5000/upload" id="up_form" method="post">
             <ul>
               <li>
@@ -64,11 +72,7 @@
 
                 <button id="bt_up">Upload</button>
 
-              <div class="progress_bar">
-                <div class="progress">
-
-                </div>
-              </div>
+              
             </div>
 
         </div>
@@ -81,19 +85,27 @@
 <script>
     const form = document.getElementById("up_form")
     const bt = document.getElementById("bt_up")
+    const load = document.getElementById("loadind")
 
 
 
     bt.addEventListener("click", function (event) {
+        load.classList.remove("off")
+        load.classList.add("on")
         let newform = new FormData(form)
 
         fetch("http://127.0.0.1:5000/upload", {
         method: "POST",
         body: newform})
-            .then(response => response.json())
             .then(response => {
-                console.log(response)
+                load.classList.remove("on")
+                load.classList.add("off")
             })
+                .catch(error => {
+                  document.getElementById("choose_upload_box").textContent = "An error occured"
+
+                })
+
     })
 
 </script>
